<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GSdemo3.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="not_init">请先初始化</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pwd">密码</string>
    <string name="nickName">昵称</string>
    <string name="domain">域名</string>
    <string name="login">init</string>
    <string name="nextStep">下一步</string>
    <string name="castnum">直播间号</string>
    <string name="watchword">口令</string>
    <string name="account">帐号</string>
    <string name="ok">确定</string>
    <string name="un_net">无网络连接</string>
    <string name="only_audio">audio</string>
    <string name="video">video</string>
    <string name="sendimg">发送图片</string>
    <!-- vote -->
    <string name="vote_query">查看</string>
    <string name="vote_edit">编辑</string>
    <string name="vote_delete">删除</string>
    <string name="vote_publish">发布</string>
    <string name="vote_result">发布结果</string>
    <string name="vote_deadline">截止</string>
    <string name="vote_add">增加</string>
    <string name="vote_manager">投票管理</string>
    <string name="vote_list_tip">投票列表</string>
    <string name="vote_name">投票名称</string>
    <string name="question_name">问题名称</string>
    <string name="vote_question_list_tip">问题列表</string>
    <string name="vote_answer_list_tip">答案列表(勾选设置正确答案)</string>
    <string name="vote_save">保存</string>
    <string name="vote_cancel">取消</string>
    <string name="vote_answer_add">增加更多答案</string>
    <string name="vote_answer_score">分数</string>
    <string name="vote_question_type">类型</string>
    <string name="vote_question_single">单选</string>
    <string name="vote_question_multi">多选</string>
    <string name="vote_answer_please_set">请设置答案选项</string>
    <string name="vote_question_please_set">请设置问题选项</string>
    <string name="vote_question_name_empty">问题名称为空</string>
    <string name="single_choice">【单选】</string>
    <string name="multi_choice">【多选】</string>
    <string name="vote_name_empty">试卷名称为空</string>
    <string name="vote_save_failure">试卷保存失败</string>
    <string name="vote_have_publish">已发布</string>
    <string name="vote_have_result">已发布结果</string>
    <string name="vote_have_deadline">已截止</string>
    <string name="vote_not_publish">未发布</string>
    <string name="vote_query_question_all_person">共(%d)人参与</string>
    <string name="vote_query_question_score">分数：%d</string>
    <string name="vote_query_answer_total">%d人</string>
    <string name="vote_commit">提交</string>
    <string name="close">关闭</string>
    <!-- chat -->
    <string name="allname">所有人</string>
    <string name="justlookmyname">只看的我的聊天</string>
    <string name="displaytime">00:00:00</string>
    <string name="sytsemmesg">系统消息</string>
    <string name="notalkingyourself">禁止你和自己聊天</string>
    <string name="notalkingwithothers">禁止你和其他人聊天</string>
    <string name="noonetalking">禁止所以人聊天</string>
    <string name="chat_system_msg">系统消息</string>
    <string name="chat_system_msg_vodbegin">直播没有开始</string>
    <string name="chat_system_msg_vodpause">直播暂停</string>
    <string name="chat_system_msg_voding">直播中</string>
    <string name="chat_system_msg_vodstop">直播停止</string>
    <string name="title_activity_chat_">Chat_Activity</string>
    <string name="chat_expression">表情</string>
    <string name="chat_sendmsg">发送</string>
    <string name="chat_back">返回</string>
    <string name="editvoddomin">请输入站点</string>
    <string name="editvodnumble">请输入编号</string>
    <string name="editvodnicknam">请输入昵称</string>
    <string name="editvodaccount">请输入登录帐号</string>
    <string name="editvodloginpassword">请输入登录密码</string>
    <string name="editvodpassword">请输入点播密码</string>
    <string name="init">init</string>
    <string name="title_activity_play_viedo">PlayViedo</string>
    <string name="title_activity_black_main">BlackMainActivity</string>
    <string name="displaydownload">显示下载按钮</string>
    <string name="stopdownload">停止</string>
    <string name="deletedownload">删除</string>
    <string name="resumedownload">恢复</string>
    <string name="playdownload">播放</string>
    <string name="title_activity_play">PlayActivity</string>
    
    <string name="chapter_list_btn">章节列表</string>
    <string name="chapter_title">章节：</string>
    <string name="doc_title">文档：</string>
    <string name="chapter_time">时间：</string>
    <!--download  -->
    <string name="download_list">下载列表</string>
</resources>
