<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vote_ver"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_name" >
            </TextView>

            <EditText
                android:id="@+id/edt_question_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edt_question_scorce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/vote_answer_score" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vote_ver"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_question_type" >
            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/vote_ver" >

                <RadioButton
                    android:id="@+id/vote_question_single_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vote_margin_btn"
                    android:text="@string/vote_question_single" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/vote_ver" >

                <RadioButton
                    android:id="@+id/vote_question_multi_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vote_margin_btn"
                    android:text="@string/vote_question_multi" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/vote_ver"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vote_answer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vote_answer_list_tip" >
            </TextView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/vote_answer_ly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/vote_answer_add_more_btn"
            android:layout_width="@dimen/vote_bottom_btn"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vote_answer_add" >
        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/vote_answer_save"
                android:layout_width="@dimen/vote_bottom_btn"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vote_save" >
            </Button>

            <Button
                android:id="@+id/answer_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vote_cancel" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>